--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,8 +33,8 @@
 }
 
 body {
+  margin: 0;
   font: 16px/1.6em "Open Sans", sans-serif;
-
   color: var(--dark);
 }
 
@@ -42,7 +42,7 @@ h1,
 h2,
 h3 {
   margin: 0;
-
+  font-weight: 400;
   font-family: "Neucha", serif;
   line-height: 1.2em;
 }
@@ -60,6 +60,7 @@ h3 {
 }
 
 .container {
+  position: relative;
   width: 1110px;
   padding: 100px 0;
 }
@@ -67,8 +68,64 @@ h3 {
 /* (1st) HEADER SECTION */
 
 .header-section {
+  position: relative;
   display: flex;
   justify-content: center;
+  background-color: var(--light);
+}
+
+.title {
+  position: relative;
+  z-index: 1;
+}
+
+.bg-img::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: "";
+  opacity: 0.1;
+}
+
+.orange {
+  color: var(--main);
+}
+
+.header-img {
+  position: absolute;
+  height: 525px;
+  top: 55px;
+  right: -270px;
+}
+
+.columns {
+  display: flex;
+  justify-content: center;
+  column-gap: 30px;
+  padding-top: 165px;
+}
+
+.column-left {
+  flex: 1 1 540px;
+}
+
+.column-right {
+  flex: 1 1 540px;
+}
+
+.btn-link {
+  display: block;
+  width: max-content;
+  padding: 12px 24px;
+  margin-top: 40px;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--white);
+  background-color: var(--main);
 }
 
 /* (2nd) VIDEO SECTION */
@@ -80,42 +137,42 @@ h3 {
 
 /* (3rd) NAVIGATION */
 
-.navigation {
+#navigation {
   display: flex;
   justify-content: center;
 }
 
 /* (4th) IKEA EFFECT */
 
-.ikea-effect {
+#ikea-effect {
   display: flex;
   justify-content: center;
 }
 
 /* (5th) PREMATURE OPTIMIZATION */
 
-.premature-optimization {
+#premature-optimization {
   display: flex;
   justify-content: center;
 }
 
 /* (6th) DISTORTION OF NOVELTY */
 
-.distortion-of-novelty {
+#distortion-of-novelty {
   display: flex;
   justify-content: center;
 }
 
 /* (7th) HYPERBOLIC DEPRECIATION */
 
-.hyperbolic-depreciation {
+#hyperbolic-depreciation {
   display: flex;
   justify-content: center;
 }
 
 /* (8th) ERRORS IN PLANNING */
 
-.errors-in-planning {
+#errors-in-planning {
   display: flex;
   justify-content: center;
 }
