--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,6 +32,10 @@
   --blue: #1085c5;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font: 16px/1.6em "Open Sans", sans-serif;
@@ -58,6 +62,15 @@ h2 {
 
 h3 {
   font-size: var(--h3);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 .container {
@@ -123,7 +136,6 @@ h3 {
   padding: 12px 24px;
   margin-top: 40px;
   font-weight: 700;
-  text-decoration: none;
   text-transform: uppercase;
   color: var(--white);
   background-color: var(--main);
@@ -135,8 +147,6 @@ h3 {
   display: flex;
   justify-content: center;
   background-color: var(--white);
-
- 
 }
 
 .video-container {
@@ -170,6 +180,48 @@ h3 {
 
 .nav-container {
   padding: 200px 0 100px;
+}
+
+.col-3 {
+  display: flex;
+  column-gap: 30px;
+}
+
+.mb-20 {
+  margin: 0 0 20px;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.col-3 li {
+  width: 350px;
+}
+
+.nav-title {
+  font-size: 52px;
+  color: var(--white);
+}
+
+.nav-item {
+  padding: 24px;
+  background-color: var(--light);
+}
+
+.nav-link {
+  color: var(--dark);
+}
+
+.card-number {
+  margin-bottom: 40px;
+  font-size: 64px;
+  font-family: "Neucha", serif;
+  line-height: 1;
+}
+
+.nav-item p {
+  margin-bottom: 0;
 }
 
 /* (4th) IKEA EFFECT */
