--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -235,8 +235,57 @@ ul {
 /* (4th) IKEA EFFECT */
 
 #ikea-effect {
+  position: relative;
   display: flex;
   justify-content: center;
+  background-color: var(--light);
+}
+
+.top-cols {
+  display: flex;
+  column-gap: 30px;
+  font-family: "Neucha", serif;
+  line-height: 1.2;
+  
+}
+
+.top-col-img {
+  vertical-align: middle;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.15);
+}
+
+.top-col-subtitle {
+  font-size: 24px;
+  color: var(--translucent-dark);
+}
+
+.top-col-title {
+  font-size: var(--h2);
+}
+
+.top-col-text {
+  font-size: var(--h3);
+}
+
+.bottom-col-title {
+  margin: 100px 0 20px;
+  padding: 5px 10px;
+  font-size: 14px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: var(--white);
+  background-color: var(--brown);
+}
+
+.bottom-col-text {
+  display: flex;
+  column-gap: 30px;
+}
+
+.bottom-col-text p {
+  margin: 0;
+  flex-shrink: 1;
+  flex-basis: 540px;
 }
 
 /* (5th) PREMATURE OPTIMIZATION */
