--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -50,6 +50,7 @@ h3 {
   font-weight: 400;
   font-family: "Neucha", serif;
   line-height: 1.2em;
+  color: var(--main);
 }
 
 h1 {
@@ -62,15 +63,6 @@ h2 {
 
 h3 {
   font-size: var(--h3);
-}
-
-a {
-  text-decoration: none;
-}
-
-ul {
-  padding: 0;
-  list-style-type: none;
 }
 
 .container {
@@ -104,10 +96,6 @@ ul {
   opacity: 0.1;
 }
 
-.orange {
-  color: var(--main);
-}
-
 .header-img {
   position: absolute;
   height: 525px;
@@ -137,6 +125,7 @@ ul {
   margin-top: 40px;
   font-weight: 700;
   text-transform: uppercase;
+  text-decoration: none;
   color: var(--white);
   background-color: var(--main);
 }
@@ -187,25 +176,13 @@ ul {
   column-gap: 30px;
 }
 
-.mb-20 {
-  margin: 0 0 20px;
-}
-
-.m-0 {
-  margin: 0;
-}
-
-.mb-0 {
-  margin-bottom: 0;
-}
-
 .nav-title {
   font-size: 52px;
-  color: var(--white);
 }
 
 .nav-link {
   color: var(--dark);
+  text-decoration: none;
 }
 
 .nav-item {
@@ -298,20 +275,11 @@ ul {
 }
 
 .bg-brown {
-  color: var(--white);
   background-color: var(--brown);
 }
 
 .bg-white {
   background-color: var(--white);
-}
-
-.translucent-white {
-  color: var(--translucent-white);
-}
-
-.brown {
-  color: var(--brown);
 }
 
 /* (6th) DISTORTION OF NOVELTY */
@@ -343,4 +311,111 @@ ul {
 .footer {
   display: flex;
   justify-content: center;
+}
+
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 55px;
+  background-color: var(--main-dark);
+}
+
+.input-button {
+  display: flex;
+}
+
+.label-email {
+  margin-bottom: 10px;
+  display: block;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.email-input {
+  width: 415px;
+  height: 50px;
+  padding: 15px;
+  border: 0;
+  display: inline-block;
+}
+
+.email-input::placeholder {
+  font: 13.1px/1.6 "Open Sans", sans-serif;
+  font-size: 13.1px;
+  color: #757575;
+}
+
+.form-button {
+  position: relative;
+  height: 50px;
+  width: 70px;
+  padding: 0;
+  border: 0;
+  background-color: var(--main);
+}
+
+.form-button::before {
+  position: absolute;
+  top: 13px;
+  right: 23px;
+  display: block;
+  width: 24px;
+  height: 24px; 
+  background-image: url("../img/send.svg");
+  content: "";
+}
+
+.service-rules {
+  font-size: 12px;
+  line-height: 1.6;
+}
+
+.contact-info {
+  margin-top: 60px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.6;
+}
+
+.contact-info p {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+/* REUSED STYLES */
+
+.mb-20 {
+  margin: 0 0 20px;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.dark {
+  color: var(--dark);
+}
+
+.orange {
+  color: var(--main);
+}
+
+.white {
+  color: var(--white);
+}
+
+.translucent-white {
+  color: var(--translucent-white);
+}
+
+.brown {
+  color: var(--brown);
+}
+
+.blue {
+  color: var(--blue);
 }
