--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -316,6 +316,7 @@ h3 {
 .form-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 40px 55px;
   background-color: var(--main-dark);
 }
